--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/bubble.png")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/Textures/another-prototype-building-sprite Background Removed.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/rootCutscene.tscn")
 current_scene="res://scenes/rootCutscene.tscn"
-center_split_offset=-378
+center_split_offset=-259
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=4
