--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -13,7 +13,8 @@ create_new_node=Rect2(510, 190, 900, 700)
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.8, 0, 0, 1, 1, 0.831373, 0.831373, 1, 0, 0.831373, 0.831373, 1, 0, 0, 0.831373, 1, 0, 0, 0, 0.992157, 0, 0, 0, 0.988235, 0, 0, 0, 0.984314, 0, 0, 0, 0.980392, 0, 0, 0, 1)
+recent_presets=PackedColorArray(0, 0.831373, 0.831373, 1, 0, 0, 0.831373, 1, 0, 0, 0, 0.992157, 0, 0, 0, 0.988235, 0, 0, 0, 0.984314, 0, 0, 0, 0.980392, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1)
+picker_shape=3
 
 [script_setup]
 
