Add enemy scenes and script

--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -1,3 +1,15 @@
+[res://scenes/boss/Boss.tscn]
+
+groups=[&"Enemies"]
+
+[res://scenes/boss/car.tscn]
+
+groups=[&"Enemies"]
+
 [res://scenes/baseEnemy.tscn]
+
+groups=[&"Enemies"]
+
+[res://scenes/fast_enemy.tscn]
 
 groups=[&"Enemies"]
