--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -18,25 +18,25 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://assets/Textures/another-prototype-building-sprite Background Removed.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/")
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/hud.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/ads_spawner_path.gd")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/rootCutscene.tscn", "res://scenes/hud.tscn")
-current_scene="res://scenes/hud.tscn"
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/baseEnemy.tscn", "res://scenes/big_enemy.tscn", "res://scenes/fast_enemy.tscn")
+current_scene="res://scenes/main.tscn"
 center_split_offset=-259
-selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://root.gd"]
-selected_script="res://root.gd"
+open_scripts=["res://scripts/ads_spawner_path.gd", "res://scripts/baseEnemy.gd", "res://big_enemy.gd", "res://scripts/boss.gd", "res://fast_enemy.gd", "res://scripts/main.gd", "res://scripts/not_enough_money.gd", "res://scripts/reward.gd", "res://root.gd"]
+selected_script="res://scripts/ads_spawner_path.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
