--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -10,6 +10,10 @@ groups=[&"Enemies"]
 
 groups=[&"Enemies"]
 
-[res://scenes/fast_enemy.tscn]
+[res://scenes/bigEnemy.tscn]
+
+groups=[&"Enemies"]
+
+[res://scenes/fastEnemy.tscn]
 
 groups=[&"Enemies"]
