--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=611
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -18,29 +18,32 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://assets/Textures/another-prototype-building-sprite Background Removed.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/")
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/ads_spawner_path.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/menu/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/menu/menu.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/baseEnemy.tscn", "res://scenes/big_enemy.tscn", "res://scenes/fast_enemy.tscn")
-current_scene="res://scenes/main.tscn"
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/baseEnemy.tscn", "res://scenes/hud.tscn", "res://scenes/bigEnemy.tscn", "res://scenes/fastEnemy.tscn", "res://victory_screen.tscn", "res://scenes/menu/menu.tscn")
+current_scene="res://scenes/menu/menu.tscn"
 center_split_offset=-259
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/ads_spawner_path.gd", "res://scripts/baseEnemy.gd", "res://big_enemy.gd", "res://scripts/boss.gd", "res://fast_enemy.gd", "res://scripts/main.gd", "res://scripts/not_enough_money.gd", "res://scripts/reward.gd", "res://root.gd"]
-selected_script="res://scripts/ads_spawner_path.gd"
+open_scripts=["res://scripts/ads_spawner_path.gd", "res://scripts/baseEnemy.gd", "res://big_enemy.gd", "res://scripts/boss.gd", "res://fast_enemy.gd", "res://scripts/hud.gd", "res://scripts/main.gd", "res://scripts/menu/menu.gd", "res://scripts/not_enough_money.gd", "res://scripts/reward.gd", "res://root.gd", "res://victory_screen.gd"]
+selected_script="res://victory_screen.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
+window_rect=Rect2i(1926, 2986, 2880, 1694)
+window_screen=0
+window_screen_rect=Rect2i(1926, 2930, 2880, 1750)
 
 [ShaderEditor]
 
