--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://assets/Textures/another-prototype-building-sprite Background Removed.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/menu/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/menu/")
 dock_filesystem_selected_paths=PackedStringArray("res://scenes/menu/menu.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/baseEnemy.tscn", "res://scenes/hud.tscn", "res://scenes/bigEnemy.tscn", "res://scenes/fastEnemy.tscn", "res://victory_screen.tscn", "res://scenes/menu/menu.tscn")
-current_scene="res://scenes/menu/menu.tscn"
+current_scene="res://scenes/main.tscn"
 center_split_offset=-259
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -41,9 +41,9 @@ open_help=[]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
-window_rect=Rect2i(1926, 2986, 2880, 1694)
+window_rect=Rect2i(0, 106, 2880, 1694)
 window_screen=0
-window_screen_rect=Rect2i(1926, 2930, 2880, 1750)
+window_screen_rect=Rect2i(0, 50, 2880, 1750)
 
 [ShaderEditor]
 
